--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 
             <div>
               <h3 class="contact__title">Call Me</h3>
-              <span class="contact__subtitle">911-095-1792</span>
+              <span class="contact__subtitle">0911108978</span>
             </div>
           </div>
 
@@ -484,7 +484,7 @@
 
             <div>
               <h3 class="contact__title">Email</h3>
-              <span class="contact__subtitle">sakshisuman137@gmail.com</span>
+              <span class="contact__subtitle">xyz123@gmail.com</span>
             </div>
           </div>
 
