--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </div>
           <div class="home__data">
             <h1 class="home__title">Hi,I'm Sakshi</h1>
-            <h3 class="home__subtitle">Frontend Developer</h3>
+            <h3 class="home__subtitle">Full Stack Web Developer</h3>
             <p class="home__description">A learning enthusiast and highly passionate about my work.
             </p>
             <a href="#contact" class="button button--flex">
@@ -171,7 +171,7 @@
               <i class="uil uil-brackets-curly skills__icon"></i>
 
               <div>
-                <h1 class="skills__title">Frontend developer</h1>
+                <h1 class="skills__title">Full Stack Web developer</h1>
                 <span class="skills__subtitle">Learning</span>
               </div>
 
@@ -181,7 +181,7 @@
               <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">HTML</h3>
-                  <span class="skills__number">90%</span>
+                  <span class="skills__number">100%</span>
                 </div>
                 <div class="skills__bar">
                   <span class="skills__percentage skills__html"></span>
@@ -190,7 +190,7 @@
               <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">CSS</h3>
-                  <span class="skills__number">70%</span>
+                  <span class="skills__number">80%</span>
                 </div>
                 <div class="skills__bar">
                   <span class="skills__percentage skills__css"></span>
@@ -199,12 +199,20 @@
               <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">JavaScript</h3>
-                  <span class="skills__number">50%</span>
+                  <span class="skills__number">80%</span>
                 </div>
                 <div class="skills__bar">
                   <span class="skills__percentage skills__js"></span>
                 </div>
               </div>
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <h3 class="skills__name"Node JS</h3>
+                  <span class="skills__number">80%</span>
+                </div>
+                <div class="skills__bar">
+                  <span class="skills__percentage skills__css"></span>
+                </div>
             </div>
           </div>
 
