--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">CSS</h3>
-                  <span class="skills__number">80%</span>
+                  <span class="skills__number">90%</span>
                 </div>
                 <div class="skills__bar">
                   <span class="skills__percentage skills__css"></span>
@@ -211,7 +211,7 @@
                   <span class="skills__number">80%</span>
                 </div>
                 <div class="skills__bar">
-                  <span class="skills__percentage skills__css"></span>
+                  <span class="skills__percentage skills__node"></span>
                 </div>
             </div>
           </div>
