--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
               </div>
               <div class="skills__data">
                 <div class="skills__titles">
-                  <h3 class="skills__name"NodeJS</h3>
+                  <h3> class="skills__name"NodeJs</h3>
                   <span class="skills__number">80%</span>
                 </div>
                 <div class="skills__bar">
@@ -340,7 +340,7 @@
 
           <div class="services__modal">
             <div class="services__modal-content">
-              <h4 class="services__modal-title">Frontend <br> Developer </h4>
+              <h4 class="services__modal-title">Full Stack <br> Developer </h4>
               <i class="uil uil-times services__modal-close"></i>
 
               <ul class="services__modal-services grid">
@@ -354,7 +354,7 @@
                 </li>
                 <li class="services__modal-service">
                   <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I position your company brand.</p>
+                  <p>I develop backend interactions.</p>
                 </li>
               </ul>
             </div>
@@ -537,7 +537,7 @@
       <div class="footer__container container grid">
         <div>
           <h1 class="footer__title"></h1>
-          <span class="footer__subtitle">Frontend developer</span>
+          <span class="footer__subtitle">Full Stack Developer</span>
         </div>
         <ul class="footer__links">
           <li>
@@ -547,7 +547,7 @@
             <a href="#portfolio" class="footer__link">Portfolio</a>
           </li>
           <li>
-            <a href="#contact" class="footer__link">Conatactme</a>
+            <a href="#contact" class="footer__link">Contactme</a>
           </li>
         </ul>
 
