--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
               </div>
               <div class="skills__data">
                 <div class="skills__titles">
-                  <h3> class="skills__name"NodeJs</h3>
+                  <h3 class="skills__name">NodeJs</h3>
                   <span class="skills__number">80%</span>
                 </div>
                 <div class="skills__bar">
@@ -340,7 +340,7 @@
 
           <div class="services__modal">
             <div class="services__modal-content">
-              <h4 class="services__modal-title">Full Stack <br> Developer </h4>
+              <h4 class="services__modal-title">FullStack <br> Developer </h4>
               <i class="uil uil-times services__modal-close"></i>
 
               <ul class="services__modal-services grid">
