--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </div>
           <div class="home__data">
             <h1 class="home__title">Hi,I'm Sakshi</h1>
-            <h3 class="home__subtitle">Full Stack Web Developer</h3>
+            <h3 class="home__subtitle">Full Stack Developer</h3>
             <p class="home__description">A learning enthusiast and highly passionate about my work.
             </p>
             <a href="#contact" class="button button--flex">
@@ -171,7 +171,7 @@
               <i class="uil uil-brackets-curly skills__icon"></i>
 
               <div>
-                <h1 class="skills__title">Full Stack Web developer</h1>
+                <h1 class="skills__title">Frontend developer</h1>
                 <span class="skills__subtitle">Learning</span>
               </div>
 
@@ -190,7 +190,7 @@
               <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">CSS</h3>
-                  <span class="skills__number">90%</span>
+                  <span class="skills__number">70%</span>
                 </div>
                 <div class="skills__bar">
                   <span class="skills__percentage skills__css"></span>
@@ -199,20 +199,12 @@
               <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">JavaScript</h3>
-                  <span class="skills__number">80%</span>
+                  <span class="skills__number">50%</span>
                 </div>
                 <div class="skills__bar">
                   <span class="skills__percentage skills__js"></span>
                 </div>
               </div>
-              <div class="skills__data">
-                <div class="skills__titles">
-                  <h3 class="skills__name">NodeJs</h3>
-                  <span class="skills__number">80%</span>
-                </div>
-                <div class="skills__bar">
-                  <span class="skills__percentage skills__node"></span>
-                </div>
             </div>
           </div>
 
@@ -329,7 +321,7 @@
         <div class="services__content">
           <div>
             <i class="uil uil-web-grid services__icon"></i>
-            <h3 class="services__title">Frontend <br> Developer</h3>
+            <h3 class="services__title">Full Stack <br> Developer</h3>
 
           </div>
 
@@ -340,7 +332,7 @@
 
           <div class="services__modal">
             <div class="services__modal-content">
-              <h4 class="services__modal-title">FullStack <br> Developer </h4>
+              <h4 class="services__modal-title">Full Stack<br> Developer </h4>
               <i class="uil uil-times services__modal-close"></i>
 
               <ul class="services__modal-services grid">
@@ -354,7 +346,7 @@
                 </li>
                 <li class="services__modal-service">
                   <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I develop backend interactions.</p>
+                  <p>I develop websites using MERN Stack</p>
                 </li>
               </ul>
             </div>
@@ -415,21 +407,21 @@
         <div class="swiper-wrapper">
           <!--==================== PORTFOLIO 1 ====================-->
           <div class="portfolio__content grid swiper-slide">
-            <img src="assets/img/b.png" alt="" class="portfolio__img">
+            <img src="https://res.cloudinary.com/dlhguqrgl/image/upload/v1643191780/Portfolio/Screenshot_244_v5eigo.png" alt="" class="portfolio__img">
 
             <div class="portfolio__data">
-              <h3 class="portfolio__title">Travel Website</h3>
-              <p class="portfolio__description">This website covers three affordable places for holiday within India.
+              <h3 class="portfolio__title">YelpCamp</h3>
+              <p class="portfolio__description">This is a full stack camping website using REST APIs and MongoDB.
               </p>
-              <a href="#" class="button button--flex button--small portfolio__button">
-                Demo
+              <a href="https://limitless-lake-05311.herokuapp.com/" class="button button--flex button--small portfolio__button">
+            View
                 <i class="uil uil-arrow-right button__icon"></i>
               </a>
             </div>
           </div>
           <!--==================== PORTFOLIO 2 ====================-->
           <div class="portfolio__content grid swiper-slide">
-            <img src="assets/img/winterart.png" alt="" class="portfolio__img">
+            <img src="https://res.cloudinary.com/dlhguqrgl/image/upload/v1643191780/Portfolio/Screenshot_244_v5eigo.png" alt="" class="portfolio__img">
 
             <div class="portfolio__data">
               <h3 class="portfolio__title">Winter Art</h3>
@@ -482,7 +474,7 @@
 
             <div>
               <h3 class="contact__title">Call Me</h3>
-              <span class="contact__subtitle">0911108978</span>
+              <span class="contact__subtitle">911-095-1792</span>
             </div>
           </div>
 
@@ -492,7 +484,7 @@
 
             <div>
               <h3 class="contact__title">Email</h3>
-              <span class="contact__subtitle">xyz123@gmail.com</span>
+              <span class="contact__subtitle">sakshisuman137@gmail.com</span>
             </div>
           </div>
 
@@ -537,7 +529,7 @@
       <div class="footer__container container grid">
         <div>
           <h1 class="footer__title"></h1>
-          <span class="footer__subtitle">Full Stack Developer</span>
+          <span class="footer__subtitle">Frontend developer</span>
         </div>
         <ul class="footer__links">
           <li>
@@ -547,7 +539,7 @@
             <a href="#portfolio" class="footer__link">Portfolio</a>
           </li>
           <li>
-            <a href="#contact" class="footer__link">Contactme</a>
+            <a href="#contact" class="footer__link">Conatactme</a>
           </li>
         </ul>
 
