--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
         </div>
         <!--==================== SKILLS 2 ====================-->
-        <div class="skills__content skills__close">
+        <div class="skills__content skills__open">
           <div class="skills__header">
             <i class="uil uil-swatchbook skills__icon"></i>
 
@@ -411,7 +411,7 @@
 
             <div class="portfolio__data">
               <h3 class="portfolio__title">YelpCamp</h3>
-              <p class="portfolio__description">This is a full stack camping website using REST APIs and MongoDB.
+              <p class="portfolio__description">This is a full stack camping website using NODE JS. It also uses REST APIs and MongoDB as database.
               </p>
               <a href="https://limitless-lake-05311.herokuapp.com/" class="button button--flex button--small portfolio__button">
             View
@@ -421,11 +421,11 @@
           </div>
           <!--==================== PORTFOLIO 2 ====================-->
           <div class="portfolio__content grid swiper-slide">
-            <img src="https://res.cloudinary.com/dlhguqrgl/image/upload/v1643191780/Portfolio/Screenshot_244_v5eigo.png" alt="" class="portfolio__img">
+            <img src="https://res.cloudinary.com/dlhguqrgl/image/upload/v1643826307/Portfolio/Screenshot_231_dgmqlf.png" alt="" class="portfolio__img">
 
             <div class="portfolio__data">
-              <h3 class="portfolio__title">Winter Art</h3>
-              <p class="portfolio__description">A perfect blend of colours depicting a beautiful night view.</p>
+              <h3 class="portfolio__title">AdWARtise</h3>
+              <p class="portfolio__description">An event website for a treasure hunt round. It is made using NODE.JS and MongoDB as a databse. </p>
               <a href="#" class="button button--flex button--small portfolio__button">
                 Demo
                 <i class="uil uil-arrow-right button__icon"></i>
@@ -434,11 +434,11 @@
           </div>
           <!--==================== PORTFOLIO 3 ====================-->
           <div class="portfolio__content grid swiper-slide">
-            <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+            <img src="https://res.cloudinary.com/dlhguqrgl/image/upload/v1643826498/Portfolio/Screenshot_237_i79upc.png" alt="" class="portfolio__img">
 
             <div class="portfolio__data">
-              <h3 class="portfolio__title">Online store</h3>
-              <p class="portfolio__description"></p>
+              <h3 class="portfolio__title">Hunt-Down</h3>
+              <p class="portfolio__description">Made for webiste exploration round using REST APIs. Uses Bootstarp for frontend.</p>
               <a href="#" class="button button--flex button--small portfolio__button">
                 Demo
                 <i class="uil uil-arrow-right button__icon"></i>
@@ -474,7 +474,7 @@
 
             <div>
               <h3 class="contact__title">Call Me</h3>
-              <span class="contact__subtitle">911-095-1792</span>
+              <span class="contact__subtitle">001-383-2637</span>
             </div>
           </div>
 
@@ -539,7 +539,7 @@
             <a href="#portfolio" class="footer__link">Portfolio</a>
           </li>
           <li>
-            <a href="#contact" class="footer__link">Conatactme</a>
+            <a href="#contact" class="footer__link">Contact Me</a>
           </li>
         </ul>
 
@@ -589,25 +589,25 @@
     }
 
 
-    function change2() {
-      if (p == 0) {
-        document.querySelectorAll(".skills__content").forEach(loop1);
-        function loop1(item) {
-          item.classList.replace("skills__open", "skills__close");
-        }
-        p = 1;
-        return;
+    // function change2() {
+    //   if (p == 0) {
+    //     document.querySelectorAll(".skills__content").forEach(loop1);
+    //     function loop1(item) {
+    //       item.classList.replace("skills__open", "skills__close");
+    //     }
+    //     p = 1;
+    //     return;
 
-      }
-      else {
-        document.querySelectorAll(".skills__content").forEach(loop2);
-        function loop2(item) {
-          item.classList.replace("skills__close", "skills__open");
-        }
-        p = 0;
-        return;
-      }
-    }
+    //   }
+    //   else {
+    //     document.querySelectorAll(".skills__content").forEach(loop2);
+    //     function loop2(item) {
+    //       item.classList.replace("skills__close", "skills__open");
+    //     }
+    //     p = 0;
+    //     return;
+    //   }
+    // }
 
   </script>
 
