--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </svg>
           </div>
           <div class="home__data">
-            <h1 class="home__title">Hi,I'm Sakshi</h1>
+            <h1 class="home__title">Hi, I'm Sakshi</h1>
             <h3 class="home__subtitle">Full Stack Developer</h3>
             <p class="home__description">A learning enthusiast and highly passionate about my work.
             </p>
@@ -146,10 +146,10 @@
 
         <div class="about__data">
           <p class="about__description">An ambitious and driven person with creative approach for problem solving.
-            Gaining knowledge in web development and graphic designing along with producing quality work.
+            Gaining knowledge in web development and graphic designing along with producing quality work. I am good when it comes to analyzing a problem and also in offering solutions for various problems.
           </p>
           <div class="about__buttons">
-            <a href="assets/pdf/Sakshi's Resume (1).pdf" class="button button--flex">
+            <a href="assets/pdf/sakshi resume feb.pdf" class="button button--flex">
               Download CV<i class="uil uil-download-alt"></i>
             </a>
           </div>
@@ -171,7 +171,7 @@
               <i class="uil uil-brackets-curly skills__icon"></i>
 
               <div>
-                <h1 class="skills__title">Frontend developer</h1>
+                <h1 class="skills__title">Web Developer</h1>
                 <span class="skills__subtitle">Learning</span>
               </div>
 
@@ -529,7 +529,7 @@
       <div class="footer__container container grid">
         <div>
           <h1 class="footer__title"></h1>
-          <span class="footer__subtitle">Frontend developer</span>
+          <span class="footer__subtitle">Web developer</span>
         </div>
         <ul class="footer__links">
           <li>
